cmake_minimum_required(VERSION 3.20)
project(clio_cae_core VERSION 1.0.0)

#------------------------------------------------------------------------------
# ChiMod utilities and dependencies
#------------------------------------------------------------------------------
# ChiMod utilities are now provided by ClioCoreCommon.cmake in /workspace/cmake
# All find_package calls are handled by root CMakeLists.txt
# Targets chimaera::cxx, clio::cte::core_client, etc. are already available

# All required packages (chimaera, clio_cte_core, yaml-cpp) are already found
# by ClioCoreCommon.cmake in the root CMakeLists.txt

#------------------------------------------------------------------------------
# Optional HDF5 support (found by root CMakeLists.txt)
#------------------------------------------------------------------------------
if(CLIO_CAE_ENABLE_HDF5)
  # HDF5 is already found by root CMakeLists.txt

  if(HDF5_FOUND)
    message(STATUS "CAE HDF5 support: ENABLED")
    add_compile_definitions(CLIO_CAE_ENABLE_HDF5)
    set(HDF5_ENABLED TRUE)
  else()
    message(WARNING "CLIO_CAE_ENABLE_HDF5 is ON but HDF5 package not found")
    message(WARNING "HDF5 support will be disabled. Install HDF5 to enable.")
    set(HDF5_ENABLED FALSE)
    set(CLIO_CAE_ENABLE_HDF5 OFF PARENT_SCOPE)
  endif()
else()
  message(STATUS "CAE HDF5 support: DISABLED")
  set(HDF5_ENABLED FALSE)
endif()

#------------------------------------------------------------------------------
# Optional Globus support (found by root CMakeLists.txt)
#------------------------------------------------------------------------------
if(CAE_ENABLE_GLOBUS)
  # Poco and nlohmann_json are already found by root CMakeLists.txt

  if(Poco_FOUND AND nlohmann_json_FOUND)
    message(STATUS "CAE Globus support: ENABLED")
    add_compile_definitions(CAE_ENABLE_GLOBUS)
    set(GLOBUS_ENABLED TRUE)
  else()
    message(WARNING "CAE_ENABLE_GLOBUS is ON but required dependencies not found:")
    if(NOT Poco_FOUND)
      message(WARNING "  - POCO library (Net, NetSSL, Crypto, JSON components) not found")
    endif()
    if(NOT nlohmann_json_FOUND)
      message(WARNING "  - nlohmann_json library not found")
    endif()
    message(WARNING "Globus support will be disabled. Install dependencies to enable.")
    set(GLOBUS_ENABLED FALSE)
    set(CAE_ENABLE_GLOBUS OFF)
  endif()
else()
  message(STATUS "CAE Globus support: DISABLED")
  set(GLOBUS_ENABLED FALSE)
endif()

#------------------------------------------------------------------------------
# Client Library
#------------------------------------------------------------------------------
add_clio_module_client(
  SOURCES
    src/core_client.cc
  LINK_LIBRARIES
    clio_cte_core_client
)

#------------------------------------------------------------------------------
# Runtime Library
#------------------------------------------------------------------------------
set(RUNTIME_SOURCES
  src/core_runtime.cc
  src/factory/assimilator_factory.cc
  src/factory/binary_file_assimilator.cc
  src/autogen/core_lib_exec.cc  # Auto-generated by chimaera repo refresh
)

set(RUNTIME_LINK_LIBRARIES
  clio_cte_core_client
)

# Conditionally add HDF5 assimilator if enabled
if(HDF5_ENABLED)
  list(APPEND RUNTIME_SOURCES src/factory/hdf5_file_assimilator.cc)
  list(APPEND RUNTIME_LINK_LIBRARIES ${HDF5_LIBRARIES})
endif()

# Conditionally add Globus assimilator if enabled
if(GLOBUS_ENABLED)
  list(APPEND RUNTIME_SOURCES src/factory/globus_file_assimilator.cc)
  list(APPEND RUNTIME_LINK_LIBRARIES Poco::Net Poco::NetSSL Poco::Crypto Poco::JSON nlohmann_json::nlohmann_json)
endif()

add_clio_module_runtime(
  SOURCES
    ${RUNTIME_SOURCES}
  LINK_LIBRARIES
    ${RUNTIME_LINK_LIBRARIES}
)

# Add HDF5 include directories to runtime if enabled
if(HDF5_ENABLED)
  target_include_directories(clio_cae_core_runtime PRIVATE ${HDF5_INCLUDE_DIRS})
endif()

#------------------------------------------------------------------------------
# Utilities
#------------------------------------------------------------------------------

# clio_cae utility (CAE OMNI ingest driver). Installed as `clio_cae`;
# the legacy `clio_cae_omni` name is preserved as an install-time symlink
# so out-of-tree scripts and pipelines keep working.
add_executable(clio_cae util/clio_cae.cc)
target_link_libraries(clio_cae
  PRIVATE
    clio_cae_core_client
    chimaera::cxx
    ctp::configure
)
install(TARGETS clio_cae DESTINATION bin)

# Install `clio_cae_omni` as a symlink to `clio_cae` (Windows: copy fallback).
install(CODE "
  set(_src \"\${CMAKE_INSTALL_PREFIX}/bin/clio_cae\")
  set(_dst \"\${CMAKE_INSTALL_PREFIX}/bin/clio_cae_omni\")
  if(EXISTS \"\${_src}\")
    if(WIN32)
      file(INSTALL \"\${_src}\" DESTINATION \"\${CMAKE_INSTALL_PREFIX}/bin\"
           RENAME clio_cae_omni.exe)
    else()
      execute_process(COMMAND \${CMAKE_COMMAND} -E create_symlink clio_cae \"\${_dst}\")
    endif()
    message(STATUS \"Installed clio_cae_omni -> clio_cae symlink at \${_dst}\")
  endif()
")

#------------------------------------------------------------------------------
# Tests
#------------------------------------------------------------------------------
# Enable CTest support
include(CTest)

# Add test subdirectory (contains unit tests with CTest integration)
if(BUILD_TESTING)
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../test ${CMAKE_CURRENT_BINARY_DIR}/test)

  # Install common test configuration
  install(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/../test/unit/clio_config.yaml
    ${CMAKE_CURRENT_SOURCE_DIR}/../test/unit/README.md
    DESTINATION share/clio_cae/test
  )
endif()
